--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <img src="../img/pacman.png" alt="" style="position: fixed; top: 200px; right: 1000px; z-index: 100;">
   <header class="header">
     <img src="../img/index.svg" class="Group-4" />
     <img src="../img/group-5.svg" class="Group-5" />
@@ -29,7 +30,7 @@
       </div>
     </div>
     <div class="burger">
-      <img src="./img/Burger/Top@2x.png" alt="" />
+      <img src="../img/Burger/Top@2x.png" alt="" />
       <img id="patty" src="../img/Burger/Patty.svg" alt="" />
       <img id="cheese" src="../img/Burger/Cheese@2x.png" alt="" />
       <img id="tomato" src="../img/Burger/Tomato@2x.png" alt="" />
